[NAE-2235] Improve Efficiency of Database Reads and Saves - optimize createCase event