@@ -30,7 +30,9 @@ import com.netgrif.application.engine.objects.workflow.domain.*;
 import com.netgrif.application.engine.objects.workflow.domain.eventoutcomes.EventOutcome;
 import com.netgrif.application.engine.objects.workflow.domain.eventoutcomes.caseoutcomes.CreateCaseEventOutcome;
 import com.netgrif.application.engine.objects.workflow.domain.eventoutcomes.caseoutcomes.DeleteCaseEventOutcome;
+import com.netgrif.application.engine.workflow.domain.outcomes.ReloadTaskOutcome;
 import com.netgrif.application.engine.workflow.domain.repositories.CaseRepository;
+import com.netgrif.application.engine.workflow.params.CreateCaseParams;
 import com.netgrif.application.engine.workflow.service.interfaces.IEventService;
 import com.netgrif.application.engine.objects.workflow.service.InitValueExpressionEvaluator;
 import com.netgrif.application.engine.workflow.service.interfaces.ITaskService;
@@ -42,7 +44,6 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.annotation.Lazy;
-import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -54,6 +55,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
@@ -131,7 +133,7 @@ public class WorkflowService implements IWorkflowService {
             setImmediateDataFields(useCase);
             elasticCaseService.indexNow(this.caseMappingService.transform(useCase));
         } catch (Exception e) {
-            log.error("Indexing failed [" + useCase.getStringId() + "]", e);
+            log.error("Indexing failed [{}]", useCase.getStringId(), e);
         }
         return useCase;
     }
@@ -169,7 +171,7 @@ public class WorkflowService implements IWorkflowService {
 
         List<Case> cases = repository.findAllByObjectIdsIn(objectIds).stream()
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, Case> caseMap = cases.stream()
                 .collect(Collectors.toMap(Case::getStringId, caze -> caze));
@@ -227,26 +229,39 @@ public class WorkflowService implements IWorkflowService {
     }
 
     @Override
-    public Case resolveUserRef(Case useCase) {
+    public Case resolveUserRef(Case useCase, boolean canSaveUseCase) {
+        AtomicBoolean isUseCaseModified = new AtomicBoolean(!useCase.getUsers().isEmpty() || !useCase.getNegativeViewUsers().isEmpty());
         useCase.getUsers().clear();
         useCase.getNegativeViewUsers().clear();
         useCase.getUserRefs().forEach((id, permission) -> {
-            resolveUserRefPermissions(useCase, id, permission);
+            if (resolveUserRefPermissions(useCase, id, permission)) {
+                isUseCaseModified.set(true);
+            }
         });
-        useCase.resolveViewUsers();
+        if (useCase.resolveViewUsers()) {
+            isUseCaseModified.set(true);
+        }
         taskService.resolveUserRef(useCase);
-        return save(useCase);
+        if (isUseCaseModified.get() && canSaveUseCase) {
+            return save(useCase);
+        }
+        return useCase;
     }
 
-    private void resolveUserRefPermissions(Case useCase, String userListId, Map<String, Boolean> permission) {
+    /**
+     * todo javadoc
+     * */
+    private boolean resolveUserRefPermissions(Case useCase, String userListId, Map<String, Boolean> permission) {
         List<String> userIds = getExistingUsers((UserListFieldValue) useCase.getDataSet().get(userListId).getValue());
-        if (userIds != null && userIds.size() != 0) {
+        if (userIds != null && !userIds.isEmpty()) {
             if (permission.containsKey("view") && !permission.get("view")) {
-                useCase.getNegativeViewUsers().addAll(userIds);
+                return useCase.getNegativeViewUsers().addAll(userIds);
             } else {
                 useCase.addUsers(new HashSet<>(userIds), permission);
+                return true;
             }
         }
+        return false;
     }
 
     private List<String> getExistingUsers(UserListFieldValue userListValue) {
@@ -257,115 +272,93 @@ public class WorkflowService implements IWorkflowService {
                 .collect(Collectors.toList());
     }
 
-    @Override
-    public CreateCaseEventOutcome createCase(String netId, String title, String color, LoggedUser user, Locale locale, Map<String, String> params) {
-        if (locale == null) {
-            locale = LocaleContextHolder.getLocale();
-        }
-        if (title == null) {
-            return this.createCase(netId, resolveDefaultCaseTitle(netId, locale, params), color, user, params);
-        }
-        return this.createCase(netId, title, color, user, params);
-    }
-
-    @Override
-    public CreateCaseEventOutcome createCase(String netId, String title, String color, LoggedUser user, Locale locale) {
-        return this.createCase(netId, title, color, user, locale, new HashMap<>());
-    }
-
-    @Override
-    public CreateCaseEventOutcome createCase(String netId, String title, String color, LoggedUser user, Map<String, String> params) {
-        return createCase(netId, (u) -> title, color, user, params);
-    }
-
-    @Override
-    public CreateCaseEventOutcome createCase(String netId, String title, String color, LoggedUser user) {
-        return this.createCase(netId, (u) -> title, color, user);
-    }
-
-    @Override
-    public CreateCaseEventOutcome createCaseByIdentifier(String identifier, String title, String color, LoggedUser user, Locale locale, Map<String, String> params) {
-        PetriNet net = petriNetService.getNewestVersionByIdentifier(identifier);
-        if (net == null) {
-            throw new IllegalArgumentException("Petri net with identifier [" + identifier + "] does not exist.");
-        }
-        return this.createCase(net.getStringId(), title != null && !title.equals("") ? title : net.getDefaultCaseName().getTranslation(locale), color, user, params);
-    }
-
-    @Override
-    public CreateCaseEventOutcome createCaseByIdentifier(String identifier, String title, String color, LoggedUser user, Locale locale) {
-        return this.createCaseByIdentifier(identifier, title, color, user, locale, new HashMap<>());
-    }
-
-    @Override
-    public CreateCaseEventOutcome createCaseByIdentifier(String identifier, String title, String color, LoggedUser user, Map<String, String> params) {
-        PetriNet net = petriNetService.getNewestVersionByIdentifier(identifier);
-        if (net == null) {
-            throw new IllegalArgumentException("Petri net with identifier [" + identifier + "] does not exist.");
-        }
-        return this.createCase(net.getStringId(), title, color, user, params);
-    }
-
-    @Override
-    public CreateCaseEventOutcome createCaseByIdentifier(String identifier, String title, String color, LoggedUser user) {
-        PetriNet net = petriNetService.getNewestVersionByIdentifier(identifier);
-        if (net == null) {
-            throw new IllegalArgumentException("Petri net with identifier [" + identifier + "] does not exist.");
-        }
-        return this.createCase(net.getStringId(), title, color, user);
-    }
-
-    public CreateCaseEventOutcome createCase(String netId, Function<Case, String> makeTitle, String color, LoggedUser user) {
-        return this.createCase(netId, makeTitle, color, user, new HashMap<>());
-    }
-
-    public CreateCaseEventOutcome createCase(String netId, Function<Case, String> makeTitle, String color, LoggedUser user, Map<String, String> params) {
-        // TODO: impersonation
-//        LoggedUser loggedOrImpersonated = user.getSelfOrImpersonated();
-        LoggedUser loggedOrImpersonated = user;
-        PetriNet petriNet = new com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet((com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet) petriNetService.get(new ObjectId(netId)));
-//        int rulesExecuted;
-        Case useCase = new com.netgrif.application.engine.adapter.spring.workflow.domain.Case(petriNet);
-        useCase.populateDataSet(initValueExpressionEvaluator, params);
-        useCase.setColor(color);
-        useCase.setAuthor(ActorTransformer.toActorRef(loggedOrImpersonated));
-        useCase.setCreationDate(LocalDateTime.now());
-        useCase.setTitle(makeTitle.apply(useCase));
+    public CreateCaseEventOutcome createCase(CreateCaseParams createCaseParams) {
+        fillMissingAttributes(createCaseParams);
+        PetriNet petriNet = createCaseParams.getPetriNet();
 
         CreateCaseEventOutcome outcome = new CreateCaseEventOutcome();
-        outcome.addOutcomes(eventService.runActions(petriNet.getPreCreateActions(), null, Optional.empty(), params));
-        //evaluateRules(new CreateCaseEvent(new CreateCaseEventOutcome(null, outcome.getOutcomes()), EventPhase.PRE));
+        outcome.addOutcomes(eventService.runActions(petriNet.getPreCreateActions(), null, Optional.empty(),
+                createCaseParams.getParams()));
 
         publisher.publishEvent(new CreateCaseEvent(outcome, EventPhase.PRE));
-        log.info("[" + useCase.getStringId() + "]: Case " + useCase.getTitle() + " created");
 
-        useCase.getPetriNet().initializeArcs(useCase.getDataSet());
-        taskService.reloadTasks(useCase);
-        useCase = findOne(useCase.getStringId());
-        resolveTaskRefs(useCase);
+        Case useCase = createCaseObject(createCaseParams);
+        log.info("[{}]: Case {} created", useCase.getStringId(), useCase.getTitle());
 
-        useCase = findOne(useCase.getStringId());
-        outcome.addOutcomes(eventService.runActions(petriNet.getPostCreateActions(), useCase, Optional.empty(), params));
-        useCase = findOne(useCase.getStringId());
+        ReloadTaskOutcome reloadTaskOutcome = taskService.reloadTasks(useCase, true);
+        if (reloadTaskOutcome.isAnyTaskExecuted()) {
+            useCase = findOne(useCase.getStringId());
+        }
+        boolean anyTaskDataFieldInitialized = resolveTaskRefs(useCase);
+        if (anyTaskDataFieldInitialized || !reloadTaskOutcome.isUseCaseSaved()) {
+            save(useCase);
+        }
+
+
+        outcome.addOutcomes(eventService.runActions(petriNet.getPostCreateActions(), useCase, Optional.empty(),
+                createCaseParams.getParams()));
+
         useCase = evaluateRules(new CreateCaseEvent(new CreateCaseEventOutcome(useCase, outcome.getOutcomes()), EventPhase.POST));
-//        rulesExecuted = ruleEngine.evaluateRules(useCase, new CaseCreatedFact(useCase.getStringId(), EventPhase.POST));
-//        if (rulesExecuted > 0) {
-//            useCase = save(useCase);
-//        }
+
         outcome.setCase(setImmediateDataFields(useCase));
         addMessageToOutcome(petriNet, CaseEventType.CREATE, outcome);
         publisher.publishEvent(new CreateCaseEvent(outcome, EventPhase.POST));
+
         return outcome;
     }
 
-    protected Function<Case, String> resolveDefaultCaseTitle(String netId, Locale locale, Map<String, String> params) {
-        PetriNet petriNet = new com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet((com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet) petriNetService.get(new ObjectId(netId)));
+    /**
+     * Creates pure {@link Case} object without any {@link Task} object initialized.
+     *
+     * @param createCaseParams parameters for object creation
+     *
+     * @return created {@link Case} object
+     * */
+    private Case createCaseObject(CreateCaseParams createCaseParams) {
+        PetriNet petriNet = new com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet((com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet) createCaseParams.getPetriNet());
+        Case useCase = new com.netgrif.application.engine.adapter.spring.workflow.domain.Case(petriNet);
+        useCase.populateDataSet(initValueExpressionEvaluator, createCaseParams.getParams());
+        useCase.setColor(createCaseParams.getColor());
+        useCase.setAuthor(ActorTransformer.toActorRef(createCaseParams.getLoggedUser())); // TODO: impersonation
+        useCase.setCreationDate(LocalDateTime.now());
+        useCase.setTitle(createCaseParams.getMakeTitle().apply(useCase));
+
+        useCase.getPetriNet().initializeArcs(useCase.getDataSet());
+
+        return useCase;
+    }
+
+    private void fillMissingAttributes(CreateCaseParams createCaseParams) throws IllegalArgumentException {
+        if (createCaseParams.getLoggedUser() == null) {
+            throw new IllegalArgumentException("Logged user cannot be null on Case creation.");
+        }
+        if (createCaseParams.getPetriNet() == null) {
+            PetriNet petriNet;
+            if (createCaseParams.getPetriNetId() != null) {
+                petriNet = new com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet((com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet) petriNetService.get(new ObjectId(createCaseParams.getPetriNetId())));
+            } else if (createCaseParams.getPetriNetIdentifier() != null) {
+                petriNet = new com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet((com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet) petriNetService.getNewestVersionByIdentifier(createCaseParams.getPetriNetIdentifier()));
+            } else {
+                throw new IllegalArgumentException("Could not find the PetriNet for the Case from provided inputs on case creation.");
+            }
+            createCaseParams.setPetriNet(petriNet);
+        }
+        if (createCaseParams.getMakeTitle() == null && createCaseParams.getPetriNet() != null) {
+            createCaseParams.setMakeTitle(resolveDefaultCaseTitle(createCaseParams));
+        }
+    }
+
+    private Function<Case, String> resolveDefaultCaseTitle(CreateCaseParams createCaseParams) {
+        Locale locale = createCaseParams.getLocale();
+        PetriNet petriNet = createCaseParams.getPetriNet();
         Function<Case, String> makeTitle;
         if (petriNet.hasDynamicCaseName()) {
-            makeTitle = (u) -> initValueExpressionEvaluator.evaluateCaseName(u, petriNet.getDefaultCaseNameExpression(), params).getTranslation(locale);
+            makeTitle = (u) -> initValueExpressionEvaluator.evaluateCaseName(u, petriNet.getDefaultCaseNameExpression(),
+                    createCaseParams.getParams()).getTranslation(locale);
         } else {
-            makeTitle = (u) -> petriNet.getDefaultCaseName().getTranslation(locale);
+            makeTitle = (u) -> petriNet.getTranslatedDefaultCaseName(locale);
         }
+
         return makeTitle;
     }
 
@@ -376,7 +369,7 @@ public class WorkflowService implements IWorkflowService {
         query = (BasicQuery) query.with(pageable);
         List<Case> cases = mongoTemplate.find(query, Case.class);
         decryptDataSets(cases);
-        return setImmediateDataFields(new PageImpl<Case>(cases, pageable, mongoTemplate.count(new BasicQuery(queryString, "{_id:1}"), Case.class)));
+        return setImmediateDataFields(new PageImpl<>(cases, pageable, mongoTemplate.count(new BasicQuery(queryString, "{_id:1}"), Case.class)));
     }
 
     @Override
@@ -403,7 +396,8 @@ public class WorkflowService implements IWorkflowService {
             publisher.publishEvent(new DeleteCaseEvent(outcome, EventPhase.PRE));
             useCase = ((Evaluator<DeleteCaseEvent, Case>) evaluationService.getEvaluator("default")).apply(new DeleteCaseEvent(outcome, EventPhase.PRE));
         }
-        log.info("[" + useCase.getStringId() + "]: User [" + userService.getLoggedOrSystem().getStringId() + "] is deleting case " + useCase.getTitle());
+        log.info("[{}]: User [{}] is deleting case {}", useCase.getStringId(), userService.getLoggedOrSystem().getStringId(),
+                useCase.getTitle());
 
         taskService.deleteTasksByCase(useCase.getStringId());
         repository.delete(useCase);
@@ -433,7 +427,8 @@ public class WorkflowService implements IWorkflowService {
 
     @Override
     public void deleteInstancesOfPetriNet(PetriNet net, boolean force) {
-        log.info("[" + net.getStringId() + "]: User " + userService.getLoggedOrSystem().getStringId() + " is deleting all cases and tasks of Petri net " + net.getIdentifier() + " version " + net.getVersion().toString());
+        log.info("[{}]: User {} is deleting all cases and tasks of Petri net {} version {}", net.getStringId(),
+                userService.getLoggedOrSystem().getStringId(), net.getIdentifier(), net.getVersion().toString());
         List<Case> cases = this.searchAll(QCase.case$.petriNetObjectId.eq(net.getObjectId())).getContent();
         if (!cases.isEmpty()) {
             cases.forEach(aCase -> deleteCase(aCase, new HashMap<>(), force));
@@ -508,19 +503,28 @@ public class WorkflowService implements IWorkflowService {
         model.initializeArcs(useCase.getDataSet());
     }
 
-    private void resolveTaskRefs(Case useCase) {
-        useCase.getPetriNet().getDataSet().values().stream().filter(f -> f instanceof TaskField).map(TaskField.class::cast).forEach(field -> {
-            if (field.getDefaultValue() != null && !field.getDefaultValue().isEmpty() && useCase.getDataField(field.getStringId()).getValue() != null &&
-                    useCase.getDataField(field.getStringId()).getValue().equals(field.getDefaultValue())) {
-                useCase.getDataField(field.getStringId()).setValue(new ArrayList<>());
-                List<TaskPair> taskPairList = useCase.getTasks().stream().filter(t ->
-                        (field.getDefaultValue().contains(t.getTransition()))).collect(Collectors.toList());
-                if (!taskPairList.isEmpty()) {
-                    taskPairList.forEach(pair -> ((List<String>) useCase.getDataField(field.getStringId()).getValue()).add(pair.getTask()));
-                }
-            }
-        });
-        save(useCase);
+    /**
+     * todo javadoc
+     * */
+    protected boolean resolveTaskRefs(Case useCase) {
+        AtomicBoolean anyDataFieldChanged = new AtomicBoolean(false);
+        useCase.getPetriNet().getDataSet().values().stream()
+                .filter(field -> field instanceof TaskField)
+                .map(TaskField.class::cast)
+                .forEach(taskField -> {
+                    DataField taskDataField = useCase.getDataField(taskField.getStringId());
+                    if (taskField.getDefaultValue() != null && !taskField.getDefaultValue().isEmpty() && taskDataField.getValue() != null
+                            && taskDataField.getValue().equals(taskField.getDefaultValue())) {
+                        taskDataField.setValue(new ArrayList<>());
+                        useCase.getTasks().stream()
+                                .filter(taskPair -> (taskField.getDefaultValue().contains(taskPair.getTransition())))
+                                .forEach(taskPair -> {
+                                    ((List<String>) taskDataField.getValue()).add(taskPair.getTask());
+                                    anyDataFieldChanged.set(true);
+                                });
+                    }
+                });
+        return anyDataFieldChanged.get();
     }
 
 //    @Deprecated
@@ -551,7 +555,7 @@ public class WorkflowService implements IWorkflowService {
                 Field clone = fieldFactory.buildImmediateField(useCase, fieldId);
                 immediateData.add(clone);
             } catch (Exception e) {
-                log.error("Could not built immediate field [" + fieldId + "]");
+                log.error("Could not built immediate field [{}]", fieldId);
             }
         });
         LongStream.range(0L, immediateData.size()).forEach(index -> immediateData.get((int) index).setOrder(index));
